infrastructure/postgres/pgweb/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: pgweb-auth
  namespace: default
spec:
  forwardAuth:
    address: http://auth-proxy.auth-proxy.svc.cluster.local/api/authz/check
    trustForwardHeader: true
    addAuthCookiesToResponse:
      - access_token
    authResponseHeaders:
      - X-Auth-User
      - X-Auth-Email
      - X-Auth-Role
